# Simple_management_program

./: .gitignore  Doxyfile  Istruzioni prova programma input1.txt  Istruzioni.txt  README.md
Input 1/: dipendenti.txt  prodotti.txt
Input 2/: clienti.txt  dipendenti.txt  prodotti.txt
Output/: clienti.txt  dipendenti.txt  prodotti.txt
doc/html/: annotated.html  bug.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  file_8c.html  file_8c__incl.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  head__file_8h.html  head__file_8h__dep__incl.md5  head__file_8h__incl.md5  head__file_8h_source.html  head__menu_8h.html  head__menu_8h__dep__incl.md5  head__menu_8h__incl.md5  head__menu_8h_source.html  head__ordinamento_8h.html  head__ordinamento_8h__dep__incl.md5  head__ordinamento_8h__incl.md5  head__ordinamento_8h_source.html  head__strutture_8h.html  head__strutture_8h__dep__incl.md5  head__strutture_8h__incl.md5  head__strutture_8h_source.html  main_8c.html  main_8c__incl.md5  menu_8c.html  menu_8c__incl.md5  menudata.js  ordinamento_8c.html  ordinamento_8c__incl.md5  structpersona.html  structprodotto.html  (+5 more)
doc/latex/: annotated.tex  bug.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  file_8c.tex  file_8c__incl.md5  files.tex  head__file_8h.tex  head__file_8h__dep__incl.md5  head__file_8h__incl.md5  main_8c.tex  (+22 more)
src/: CMakeLists.txt  file.c  head_file.h  head_menu.h  head_ordinamento.h  head_strutture.h  main.c  menu.c  ordinamento.c  strutture.c
(+60 files in other folders)
